knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/Pro_Forma_Facility_Detail__c.object-meta.xml
<CustomObject>
    <label>Pro Forma Facility Detail</label>
    <nameField>
        <displayFormat>Facility Detail - {000000}</displayFormat>
        <label>Pro Forma Facility Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pro Forma Facility Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>