knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/Critical_Care_EPC__c.field-meta.xml
<CustomField>
    <fullName>Critical_Care_EPC__c</fullName>
    <label>Critical Care EPC %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>