knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/Encounter_Level_Data__c.field-meta.xml
<CustomField>
    <fullName>Encounter_Level_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Encounter Level Data</label>
    <type>Checkbox</type>
</CustomField>