knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/Gross_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Percent__c</fullName>
    <label>Gross Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>