knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/Lead_NPPA_Stipends__c.field-meta.xml
<CustomField>
    <fullName>Lead_NPPA_Stipends__c</fullName>
    <label>Lead NPPA Stipends</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>