knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/Malpractice_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Malpractice_Insurance__c</fullName>
    <label>Malpractice Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>