knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/MD_Additional_Pay__c.field-meta.xml
<CustomField>
    <fullName>MD_Additional_Pay__c</fullName>
    <label>MD Additional Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>