knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/MD_Hrs_Year__c.field-meta.xml
<CustomField>
    <fullName>MD_Hrs_Year__c</fullName>
    <label>MD Hrs/Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>