knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/Med_Mal_Limits_Unique__c.field-meta.xml
<CustomField>
    <fullName>Med_Mal_Limits_Unique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Med Mal Limits – Unique</label>
    <type>Checkbox</type>
</CustomField>