knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <referenceTo>Pro_Forma_Model__c</referenceTo>
    <relationshipLabel>Pro Forma Facility Details</relationshipLabel>
    <relationshipName>Pro_Forma_Facility_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>