knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/NPPA_Benefits_Taxes__c.field-meta.xml
<CustomField>
    <fullName>NPPA_Benefits_Taxes__c</fullName>
    <label>NPPA Benefits &amp; Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>