knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/NPPA_Hrs_Day__c.field-meta.xml
<CustomField>
    <fullName>NPPA_Hrs_Day__c</fullName>
    <label>NPPA Hrs/Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>