knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/NPPA_Performance__c.field-meta.xml
<CustomField>
    <fullName>NPPA_Performance__c</fullName>
    <label>NPPA Performance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>