knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/Opportunity_Service__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Service</label>
    <referenceTo>Services__c</referenceTo>
    <relationshipLabel>Pro Forma Facility Details</relationshipLabel>
    <relationshipName>Pro_Forma_Facility_Details</relationshipName>
    <type>Lookup</type>
</CustomField>