knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/Other_Facility_Costs__c.field-meta.xml
<CustomField>
    <fullName>Other_Facility_Costs__c</fullName>
    <label>Other Facility Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>