knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/Patient_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Patient_Revenue__c</fullName>
    <label>Patient Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>