knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/Pro_Form_Model_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Pro_Form_Model_Opportunity_Id__c</fullName>
    <description>As part of PR1050558-887 User story we build this formula</description>
    <formula>CASESAFEID(Model__r.Opportunity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pro Form Model Opportunity Id</label>
    <type>Text</type>
</CustomField>