knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/Pro_Form_Model_Status__c.field-meta.xml
<CustomField>
    <fullName>Pro_Form_Model_Status__c</fullName>
    <description>As part of PR1050558-887 User story we build this formula</description>
    <formula>Text(Model__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pro Form Model Status</label>
    <type>Text</type>
</CustomField>