knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/Protector_Type__c.field-meta.xml
<CustomField>
    <fullName>Protector_Type__c</fullName>
    <label>Protector Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>