knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Line</label>
    <referenceTo>Service_Line__c</referenceTo>
    <relationshipLabel>Pro Forma Facility Details</relationshipLabel>
    <relationshipName>Pro_Forma_Facility_Details</relationshipName>
    <type>Lookup</type>
</CustomField>