knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/fields/Total_Provider_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Total_Provider_Compensation__c</fullName>
    <label>Total Provider Compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>