knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Facility_Detail__c/validationRules/ServiceOpportunityDoesNotMatch.validationRule-meta.xml
<ValidationRule>
    <fullName>ServiceOpportunityDoesNotMatch</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Model__r.Opportunity__c)),
    NOT(ISBLANK(Opportunity_Service__r.Opportunity__c)),
Model__r.Opportunity__c &lt;&gt;  Opportunity_Service__r.Opportunity__c
)</errorConditionFormula>
    <errorMessage>The &quot;Service Opportunity&quot; Does Not Match With &quot;Pro Forma Model Opportunity&quot;</errorMessage>
</ValidationRule>